[MDS-6178] CORE Project summary edit mode bugs (#3277)
* sneaky Help Guide button style fixing

* disable province with international address

* project dates validation- change data type from timestamp to date, use string comparison to ignorethe time in validation methods. Add validation for the date to be in the future

* disable add button on project links when there's no selection

* wrap text on stepped form: MS & CORE

* get rid of overlap between back-top button & save changes button (make more like MS)

* on project description tab, when click view description, have it be view mode and go to the first tab

--- a/services/core-web/src/styles/components/HelpGuide.scss
+++ b/services/core-web/src/styles/components/HelpGuide.scss
@@ -9,3 +9,15 @@
         text-align: left;
     }
 }
+
+.help-open {
+    font-size: 18px;
+    margin-bottom: 0;
+    border: none;
+    color: white;
+    padding: 0 5px;
+
+    &:hover {
+        color: white;
+    }
+}
