--- a/services/minespace-web/src/styles/components/SteppedForm.scss
+++ b/services/minespace-web/src/styles/components/SteppedForm.scss
@@ -20,8 +20,12 @@
   border-right: unset !important;
 }
 
-.stepped-menu-item {
+.ant-menu-item.stepped-menu-item {
   transition: all .1s ease-in-out;
+  text-wrap: wrap;
+  height: auto;
+  min-height: 40px;
+  line-height: 25px;
 }
 
 .stepped-menu-item:hover {
